[Mac] Fix download shelf items

Make sure that the download shelf items are updated after we exit
fullscreen.

BUG=600411

Review-Url: https://codereview.chromium.org/2148483002
Cr-Commit-Position: refs/heads/master@{#408839}

Former-commit-id: b918411255a8a4bdba4f17e417ac6a8fcd00c38c